# gtk-vector-screenshot

./: .gitignore  README  gtk-vector-screenshot.c  meson.build  take-vector-screenshot.c
